# djpress

./: .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  MANIFEST.in  README.md  justfile  noxfile.py  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: coverage.yml  docs.yml  publish.yml  test.yml
djpress/: README.md  admin.py  app_settings.py  conf.py  feeds.py  signals.py  urls.py  utils.py  views.py
djpress-example-plugin/: README.md  pyproject.toml
djpress-example-plugin/src/djpress_example_plugin/: __init__.py  plugin.py
djpress/migrations/: 0001_initial.py  0002_rename_content_type_post_post_type.py
djpress/models/: category.py  post.py
djpress/static/djpress/css/: style.css  style.min.css
djpress/templates/djpress/: base.html  index.html  single.html
djpress/templatetags/: __init__.py  djpress_tags.py  helpers.py
djpress/tests/: __init__.py  test_category_cache.py  test_djpress_tags.py  test_feeds.py  test_models.py  test_published_posts_cache.py  test_views.py
docs/: __init__.py  categories.md  conf.py  configuration.md  groups.md  index.md  installation.md  management_commands.md  markdown_customisation.md  media.md  plugins.md  search.md  sitemap.md  tags.md  templatetags.md  themes.md  url_structure.md
example/: requirements.txt
example/config/: __init__.py  asgi.py  settings.py  settings_testing.py  urls.py  wsgi.py
src/djpress/: __init__.py  admin.py  app_settings.py  apps.py  checks.py  conf.py  exceptions.py  feeds.py  markdown_renderer.py  permissions.py  plugins.py  signals.py  sitemaps.py  url_converters.py  url_utils.py  urls.py  utils.py  views.py
src/djpress/management/: __init__.py
src/djpress/management/commands/: djpress_export.py  djpress_setup_groups.py
src/djpress/migrations/: 0003_post_menu_order.py  0004_rename_name_category_title_category_menu_order.py  0005_post_parent.py  0006_alter_post_parent.py  0007_pluginstorage.py  0008_alter_post_options_alter_post_managers_and_more.py  0009_alter_post_options.py  0010_tag_post_tags.py  0011_media.py  0012_alter_post_title.py  0013_alter_post_slug_alter_post_title.py  0014_rename_date_post_published_at_and_more.py  0015_alter_media_options_and_more.py  0016_post__date.py  0017_populate_post__date_field.py  0018_post_djpress_post_title_idx_and_more.py  0019_setting.py  0020_remove_post_djpress_post_content_idx.py  0021_post_deleted_at.py  0022_alter_media_options_alter_post_options.py  __init__.py
src/djpress/models/: __init__.py  category.py  media.py  plugin_storage.py  post.py  setting.py  tag.py
src/djpress/plugins/: __init__.py  base_plugin.py  handlers.py  hook_registry.py  plugin_registry.py  protocols.py
src/djpress/static/default/css/: style.css  style.min.css
src/djpress/static/djpress/css/: style.css
src/djpress/static/simple/css/: style.css
src/djpress/templates/admin/djpress/post/: change_form.html
src/djpress/templates/djpress/: index.html
src/djpress/templates/djpress/default/: index.html
src/djpress/templates/djpress/simple/: index.html
src/djpress/templates/djpress/testing/: archives.html  author.html  base.html  category.html  home.html  index.html  page.html  search.html  single.html  tag.html
src/djpress/templatetags/: djpress_tags.py  helpers.py
tests/: conftest.py  settings_testing.py  test_admin.py  test_cache_category.py  test_cache_published_posts.py  test_checks.py  test_conf.py  test_conf_urls.py  test_djpress_tags.py  test_feeds.py  test_init.py  test_management_commands_export.py  test_management_commands_setup_groups.py  test_markdown_renderer.py  test_models_category.py  test_models_media.py  test_models_pluginstorage.py  test_models_post.py  test_models_setting.py  test_models_tag.py  test_permissions.py  test_plugins.py  test_post_authors.py  test_signals.py  test_sitemaps.py  test_templatetags_djpress_tags.py  test_templatetags_helpers.py  test_themes.py  test_url_converters.py  test_url_fallthrough.py  test_url_utils.py  test_urls.py  test_utils.py  test_views.py
