[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djpress"
version = "0.8.0"
description = "A blog application for Django sites, inspired by classic WordPress."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Stuart Maxwell", email = "stuart@amanzi.nz" }]
dependencies = ["django", "markdown", "pygments"]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
keywords = ["django", "blog", "cms", "markdown", "wordpress"]

[project.urls]
Homepage = "https://github.com/stuartmaxwell/djpress"
Repository = "https://github.com/stuartmaxwell/djpress"
Issues = "https://github.com/stuartmaxwell/djpress/issues"

[project.optional-dependencies]
test = ["pytest>=8.3.3", "pytest-django>=4.9.0"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "G004",   # Logging statement uses f-string
  "D203",   # 1 blank line required before class docstring
  "D213",   # multi-line-summary-second-line
  "TD003",  # Missing issue link on the line following this TODO
  "FIX002", # Line contains TODO, consider resolving the issue
  "TD002",  # Missing author in TODO
  "S308",   # suspicious-mark-safe-usage
]

[tool.ruff.lint.per-file-ignores]
"test*" = ["ALL"]
"**/migrations/*" = ["ALL"]
"manage.py" = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ". example"
DJANGO_SETTINGS_MODULE = "config.settings_testing"
python_files = "tests.py test_*.py *_tests.py"

[tool.uv]
dev-dependencies = [
  "coverage>=7.6.1",
  "django-debug-toolbar>=4.4.6",
  "tox-uv>=1.11.3",
]

[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
    py3{10,11,12}-django{42,50,51}
    py3{13}-django{51}
isolated_build = True

[base]
deps =
    markdown
    pygments
    pytest
    pytest-django

[testenv]
description = Run the tests with pytest and uv
deps =
    {[base]deps}
    django42: Django>=4.2,<4.3
    django50: Django>=5.0,<5.1
    django51: Django>=5.1,<5.2
commands =
    pytest
"""
