[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djpress"
version = "0.20.4"
description = "A blog application for Django sites, inspired by classic WordPress."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Stuart Maxwell", email = "stuart@amanzi.nz" }]
dependencies = ["django>=4.2.0,<=6.0", "markdown>=3.7"]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
keywords = ["django", "blog", "cms", "markdown", "wordpress"]

[project.urls]
Homepage = "https://github.com/stuartmaxwell/djpress"
Documentation = "https://stuartmaxwell.github.io/djpress/"
Repository = "https://github.com/stuartmaxwell/djpress"
Issues = "https://github.com/stuartmaxwell/djpress/issues"

[dependency-groups]
dev = ["bumpver>=2024.1130"]

[project.optional-dependencies]
test = [
  "pytest>=8.3.3",
  "pytest-django>=4.9.0",
  "pytest-coverage>=0.0",
  "django-debug-toolbar>=4.4.0",
  "nox>=2024.4.15",
  "djpress-example-plugin",
  "pytest-cov>=6.0.0",
]
docs = [
  "cogapp>=3.4.1",
  "furo>=2024.8.6",
  "myst-parser>=4.0.0",
  "sphinx>=8.1.3",
  "sphinx-autobuild>=2024.10.3",
  "sphinx-copybutton>=0.5.2",
  "sphinx-rtd-theme>=3.0.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "G004",   # Logging statement uses f-string
  "D203",   # 1 blank line required before class docstring
  "D213",   # multi-line-summary-second-line
  "TD003",  # Missing issue link on the line following this TODO
  "FIX002", # Line contains TODO, consider resolving the issue
  "TD002",  # Missing author in TODO
  "S308",   # suspicious-mark-safe-usage
  "RUF012", # Checks for mutable default values in class attributes. https://github.com/astral-sh/ruff/issues/5243
]

[tool.ruff.lint.per-file-ignores]
"test*" = ["ALL"]
"**/migrations/*" = ["ALL"]
"manage.py" = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ". example"
DJANGO_SETTINGS_MODULE = "config.settings_testing"
python_files = "tests.py test_*.py *_tests.py"

[tool.coverage.html]
show_contexts = true

[tool.coverage.run]
branch = true
include = ["src/djpress/*"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "# pragma: no cover"]

[tool.bumpver]
current_version = "0.20.4"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "ðŸ‘ bump version {old_version} -> {new_version}"
commit = true
push = true
tag = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"src/djpress/__init__.py" = ['^__version__ = "{version}"$']

[tool.uv.workspace]
members = ["djpress-example-plugin"]

[tool.uv.sources]
djpress-example-plugin = { workspace = true }
