[project]
name = "djpress-example-plugin"
version = "0.1.0"
description = "Example plugin for DJ Press"
readme = "README.md"
authors = [{ name = "Stuart Maxwell", email = "stuart@amanzi.nz" }]
requires-python = ">=3.10"
dependencies = ["django>=4.2.0", "djpress"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
djpress = { workspace = true }
